# OmniFlow

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/agents/: __init__.py  demand_forecast.py  graph.py  logistics_agent.py  optimizer_agent.py  orchestrator.py  state.py  store_agent.py  supplier_agent.py  trend_agent.py  warehouse_agent.py
backend/app/api/: __init__.py  agents.py  auth.py  dashboard.py  deps.py  forecasts.py  inventory.py  products.py  shipments.py  simulations.py  stores.py  warehouses.py  websocket.py
backend/app/middleware/: __init__.py
backend/app/ml/: __init__.py  forecaster.py  sentiment.py
backend/app/models/: __init__.py  agent_event.py  forecast.py  inventory.py  product.py  recommendation.py  shipment.py  simulation.py  store.py  user.py  warehouse.py
backend/app/schemas/: __init__.py  auth.py  dashboard.py  forecast.py  inventory.py  product.py  shipment.py  simulation.py  store.py  warehouse.py
backend/app/seed/: __init__.py  seed_data.py
backend/app/services/: __init__.py  digital_twin.py  event_bus.py  forecast_service.py  inventory_service.py  simulation_service.py  vector_store.py
backend/tests/: conftest.py  test_api.py
docs/: architecture.md  demo-walkthrough.md  setup-guide.md
frontend/: package-lock.json
infra/docker/: backend.Dockerfile  frontend.Dockerfile
infra/k8s/: backend-deployment.yaml  frontend-deployment.yaml  kafka-deployment.yaml  namespace.yaml  postgres-statefulset.yaml  (+1 more)
(+12 files in other folders)
