[project]
name = "omniflow-ai"
version = "1.0.0"
description = "OmniFlow AI — Multi-Agent Retail Inventory Optimization System"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
    # Database
    "sqlalchemy[asyncio]>=2.0.35",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Redis
    "redis[hiredis]>=5.2.0",
    # LangGraph / LangChain
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    # ML
    "xgboost>=2.1.0",
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # Kafka
    "aiokafka>=0.11.0",
    # Config
    "pydantic-settings>=2.6.0",
    # HTTP
    "httpx>=0.27.0",
    # pgvector
    "pgvector>=0.3.0",
    # Python 3.9 type-backport support for Pydantic v2
    "eval-type-backport>=0.2.0",
    # Passlib compatibility pinning
    "bcrypt==4.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
